# web-api

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: lint_typing.yml  ruff.yml
src/beta/application/contracts/form/: request.py  response.py
src/beta/application/contracts/user/: request.py  response.py
src/beta/application/usecases/: form.py  user.py
src/beta/domain/common/: entities.py  exceptions.py  value_objects.py
src/beta/domain/form/: entities.py  repositories.py  value_objects.py
src/beta/domain/user/: entities.py  repositories.py  value_objects.py
src/beta/infrastructure/: config.py
src/beta/infrastructure/data_access/: alembic.ini
src/beta/infrastructure/data_access/migrations/: env.py
src/beta/infrastructure/data_access/migrations/versions/: 28fd3c9e863d_init_new_db.py  5dc2df3ca22f_init_new_db.py  a30b8c43e452_init.py  c3da229ef15e_check_.py  c769636cf4ea_init.py  cf659f2d1980_init.py
src/beta/infrastructure/data_access/models/: __init__.py  base.py  form.py  gender.py  interests.py  metros.py  preferences.py  user.py  users_interests.py  users_reactions.py
src/beta/infrastructure/data_access/models/types/: types.py
src/beta/infrastructure/data_access/repositories/: form.py  user.py
src/beta/infrastructure/di/: main.py
src/beta/infrastructure/di/providers/: adapters.py  usecases.py
src/beta/main/: web_api.py
src/beta/presentation/web_api/: exc_handlers.py
src/beta/presentation/web_api/routers/: check.py  form.py  user.py
src/beta/presentation/web_api/schemas/: form.py  user.py
